--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "open-in-explorer",
+  "name": "g",
   "displayName": "open-in-explorer",
   "description": "",
   "version": "0.0.4",
   "publisher": "Takashivscode",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sakataka/open-in-explorer.git"
+  },
   "icon": "images/logo.png",
   "engines": {
     "vscode": "^1.97.0"
